set up done, to work on sliding images

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,17 @@
       };
     }
 
+    const sliderImages = document.querySelectorAll('.slide-in');
+
+    function checkSlide(e) {
+      console.log(window.scrollY)
+      sliderImages.forEach(sliderImage => {
+
+      })
+    }
+
+    window.addEventListener('scroll', debounce(checkSlide));
+
   </script>
 
   <style>
