--- a/public/index.html
+++ b/public/index.html
@@ -91,8 +91,9 @@
   <style>
     html {
       box-sizing: border-box;
-      background:#ffc600;
+      background:#30b4aa;
       font-family:'helvetica neue';
+      color: #f47a51;
       font-size: 20px;
       font-weight: 200;
     }
@@ -128,6 +129,7 @@
     .slide-in {
       opacity:0;
       transition:all .5s;
+      transition-timing-function: cubic-bezier(0.56, 0.19, 0.18, 1.32);
     }
 
     .align-left.slide-in {
